--- a/lesswarnings2/libp2p/protocols/pubsub/pubsub.html
+++ b/lesswarnings2/libp2p/protocols/pubsub/pubsub.html
@@ -482,9 +482,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -494,9 +494,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -506,9 +506,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -518,9 +518,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -530,9 +530,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -542,9 +542,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -554,9 +554,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -566,9 +566,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -578,9 +578,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -590,9 +590,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -602,9 +602,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -614,9 +614,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -626,9 +626,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -638,9 +638,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -650,9 +650,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -662,9 +662,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#0a6477268e850d7bc98347b3875301524871765f/metrics.nim#L550" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/nimbledeps/pkgs/metrics-#21e99a2e9d9f80e68bef65c80ef781613005fccb/metrics.nim#L557" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -1147,7 +1147,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a>, <a href="pubsubpeer.html#PubSubObserver"><span class="Identifier">PubSubObserver</span></a>, <a href="../protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a>, <a href="../protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a>, <a href="../protocol.html#stop.e,LPProtocol"><span class="Identifier">stop</span></a>, <a href="../protocol.html#codec=,LPProtocol,string"><span class="Identifier">codec=</span></a>, <a href="../protocol.html#codec,LPProtocol"><span class="Identifier">codec</span></a>, <a href="../protocol.html#init.e,LPProtocol"><span class="Identifier">init</span></a>, <a href="../protocol.html#start.e,LPProtocol"><span class="Identifier">start</span></a>, <a href="errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a>
+<a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a>, <a href="pubsubpeer.html#PubSubObserver"><span class="Identifier">PubSubObserver</span></a>, <a href="../protocol.html#maxIncomingStreams=,LPProtocol,int"><span class="Identifier">maxIncomingStreams=</span></a>, <a href="../protocol.html#init.e,LPProtocol"><span class="Identifier">init</span></a>, <a href="../protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a>, <a href="../protocol.html#codec=,LPProtocol,string"><span class="Identifier">codec=</span></a>, <a href="../protocol.html#maxIncomingStreams,LPProtocol"><span class="Identifier">maxIncomingStreams</span></a>, <a href="../protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a>, <a href="../protocol.html#stop.e,LPProtocol"><span class="Identifier">stop</span></a>, <a href="../protocol.html#DefaultMaxIncomingStreams"><span class="Identifier">DefaultMaxIncomingStreams</span></a>, <a href="../protocol.html#start.e,LPProtocol"><span class="Identifier">start</span></a>, <a href="../protocol.html#new,typeLPProtocol,seq[string],LPProtoHandler"><span class="Identifier">new</span></a>, <a href="../protocol.html#codec,LPProtocol"><span class="Identifier">codec</span></a>, <a href="errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a>
 </dl></div>
 
   </div>
@@ -1157,7 +1157,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 17:08:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-04 15:49:08 UTC</small>
       </div>
     </div>
   </div>
