--- a/lesswarnings2/libp2p/protocols/secure/secure.html
+++ b/lesswarnings2/libp2p/protocols/secure/secure.html
@@ -538,7 +538,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a>, <a href="../protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a>, <a href="../protocol.html#stop.e,LPProtocol"><span class="Identifier">stop</span></a>, <a href="../protocol.html#codec=,LPProtocol,string"><span class="Identifier">codec=</span></a>, <a href="../protocol.html#codec,LPProtocol"><span class="Identifier">codec</span></a>, <a href="../protocol.html#init.e,LPProtocol"><span class="Identifier">init</span></a>, <a href="../protocol.html#start.e,LPProtocol"><span class="Identifier">start</span></a>
+<a href="../protocol.html#maxIncomingStreams=,LPProtocol,int"><span class="Identifier">maxIncomingStreams=</span></a>, <a href="../protocol.html#init.e,LPProtocol"><span class="Identifier">init</span></a>, <a href="../protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a>, <a href="../protocol.html#codec=,LPProtocol,string"><span class="Identifier">codec=</span></a>, <a href="../protocol.html#maxIncomingStreams,LPProtocol"><span class="Identifier">maxIncomingStreams</span></a>, <a href="../protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a>, <a href="../protocol.html#stop.e,LPProtocol"><span class="Identifier">stop</span></a>, <a href="../protocol.html#DefaultMaxIncomingStreams"><span class="Identifier">DefaultMaxIncomingStreams</span></a>, <a href="../protocol.html#start.e,LPProtocol"><span class="Identifier">start</span></a>, <a href="../protocol.html#new,typeLPProtocol,seq[string],LPProtoHandler"><span class="Identifier">new</span></a>, <a href="../protocol.html#codec,LPProtocol"><span class="Identifier">codec</span></a>
 </dl></div>
 
   </div>
@@ -548,7 +548,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 17:08:45 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-04 15:49:05 UTC</small>
       </div>
     </div>
   </div>
