--- a/upgraderefacto/libp2p/connmanager.html
+++ b/upgraderefacto/libp2p/connmanager.html
@@ -312,7 +312,7 @@ window.addEventListener("DOMContentLoaded", main2);
   </ul>
   <ul class="simple nested-toc-section">getOutgoingSlot
       <li><a class="reference" href="#getOutgoingSlot%2CConnManager"
-    title="getOutgoingSlot(c: ConnManager; forceDial = false): Future[ConnectionSlot]">getOutgoingSlot(c: ConnManager; forceDial = false): Future[ConnectionSlot]</a></li>
+    title="getOutgoingSlot(c: ConnManager; forceDial = false): ConnectionSlot">getOutgoingSlot(c: ConnManager; forceDial = false): ConnectionSlot</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">getStream
@@ -694,8 +694,8 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="getOutgoingSlot,ConnManager" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#getOutgoingSlot%2CConnManager"><span class="Identifier">getOutgoingSlot</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a><span class="Other">;</span> <span class="Identifier">forceDial</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><a href="connmanager.html#ConnectionSlot"><span class="Identifier">ConnectionSlot</span></a><span class="Other">]</span> {.
-    <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#getOutgoingSlot%2CConnManager"><span class="Identifier">getOutgoingSlot</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a><span class="Other">;</span> <span class="Identifier">forceDial</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span><span class="Other">:</span> <a href="connmanager.html#ConnectionSlot"><span class="Identifier">ConnectionSlot</span></a> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">,</span> <a href="connmanager.html#TooManyConnectionsError"><span class="Identifier">TooManyConnectionsError</span></a><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -902,7 +902,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-03 09:53:05 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-10 10:45:09 UTC</small>
       </div>
     </div>
   </div>
